syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/nivista/steady/.gen/protos/common";

message Schedule {
    string cron = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp stop_time = 3;
    Executions executions = 4;
}

enum Executions {
    INFINITE = 0;
}

message Task {
    oneof task {
        HTTPConfig http_config = 1;
    }
}

message Meta {
    google.protobuf.Timestamp create_time = 1;
}

message Progress {
    int32 completedExecutions = 1;
    google.protobuf.Timestamp lastExecution = 2;
}

enum Method {
    GET = 0;
    POST = 1;
}

message HTTPConfig {
    string url = 1;
    Method method = 2;
    string body = 3;
    map<string, string> headers = 4;
}

message IntervalConfig {
    google.protobuf.Timestamp start_time = 1;
    int32 interval = 2;
    Executions executions = 3;
}

message CronConfig {
    google.protobuf.Timestamp start_time = 1;
    string cron = 2;
    Executions executions = 3;
}